# ConsoleImageGenerator

./: .gitignore  .gitmodules  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  LICENSE  README.md  SourceList.cmake  cvp
src/: main.cpp
src/cpp/: consoleConverter.cpp  resizer.cpp
src/inc/: consoleConverter.h  resizer.h
