cmake_minimum_required(VERSION 2.8)
project( cvp )
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
find_package( OpenCV REQUIRED PATHS ./build )
include_directories( ${OpenCV_INCLUDE_DIRS} ./src/inc ./args )
include(SourceList.cmake)
add_executable( cvp ${PROJECT_SOURCE_DIR} ${sources} )
target_link_libraries( cvp ${OpenCV_LIBS})
add_subdirectory(${PROJECT_SOURCE_DIR}/args)
